kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-planner-api
  namespace: workout-planner-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workout-planner-api
  template:
    metadata:
      labels:
        app: workout-planner-api
    spec:
      containers:
      - name: workout-planner-api
        image: aboubakar940/workout-planner:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: workout-planner-config
