kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workout-planner-api
spec:
  type: NodePort
  ports:
    - port: 3000        # Port interne du service
      targetPort: 3000  # Port de l'application dans le conteneur
      nodePort: 30000   # Port externe accessible depuis l'extérieur
  selector:
    app: workout-planner-api  # Ce label doit correspondre à celui du pod dans le deployment
